# neo-stem

./: MANIFEST.in  README.md  pyproject.toml
.claude/: settings.local.json
docs/: publishing.md
docs/plan/: pyqt5-migration.md
docs/specs/: project-specs.md
neo_stem/: __init__.py  app.py
neo_stem/backend/: __init__.py  badge_backend.py  progress_backend.py
neo_stem/data/: __init__.py  constants.py
neo_stem/db/: __init__.py  progress.py
neo_stem/qml/activities/q10_magnet/: Q10Magnet.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml  qmldir
neo_stem/qml/activities/q11_bicycle/: Q11Bicycle.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml  qmldir
neo_stem/qml/activities/q12_leaf_color/: Q12LeafColor.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml  qmldir
neo_stem/qml/activities/q13_light_bulb/: Q13LightBulb.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml  qmldir
neo_stem/qml/activities/q14_rust/: Q14Rust.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml  qmldir
neo_stem/qml/activities/q15_fish_gills/: Q15FishGills.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml  qmldir
neo_stem/qml/activities/q16_soda_fizz/: Q16SodaFizz.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml  qmldir
neo_stem/qml/activities/q17_ice_cream/: Q17IceCream.qml  Step1Phenomenon.qml  Step2DQB.qml  Step3Investigation.qml  Step4Model.qml  Step5Problematize.qml  qmldir
neo_stem/qml/core/: ActivityBase.qml  InvestigationBase.qml  qmldir
neo_stem/qml/menu/: MainMenu.qml  ProfileScreen.qml  QuestionSelector.qml  SettingsScreen.qml  StepSelector.qml  qmldir
neo_stem/ui/: __init__.py  main_window.py  theme.py  view_stack.py
neo_stem/ui/activities/: __init__.py  activity_base.py  registry.py  step_base.py
neo_stem/ui/views/: __init__.py  profile_view.py  question_selector.py  settings_view.py  splash_view.py  step_selector.py
neo_stem/ui/widgets/: __init__.py  neo_bar.py  neo_bonus.py  neo_score.py  touch_button.py
scripts/: install_on_neo.sh
src/core/: NeoBar.qml  NeoConstants.qml
src/menu/: MainMenu.qml  QuestionSelector.qml  SettingsScreen.qml  StepSelector.qml
(+126 files in other folders)
