[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-stem"
version = "1.0.3"
description = "NEO STEM - Ung dung giao duc STEM tuong tac cho hoc sinh Viet Nam (Lop 3-9)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["PyQt6>=6.5"]
authors = [
    {name = "Binh Dan Hoc STEM & Robot"},
]
keywords = ["stem", "education", "vietnam", "qt6", "children"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.scripts]
neo-stem = "neo_stem.app:main"

[project.urls]
Homepage = "https://github.com/tuanln/NEO_STEM"

[tool.setuptools]
packages = [
    "neo_stem",
    "neo_stem.data",
    "neo_stem.backend",
    "neo_stem.db",
]

[tool.setuptools.package-data]
neo_stem = ["assets/**/*", "translations/**/*", "qml/**/*.qml", "qml/**/qmldir"]
